--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,7 +2,7 @@ baseURL = 'https://migus.org/'
 enableEmoji = true
 enableRobotsTXT = true
 languageCode = 'en-us'
-title = 'Migus Dot Org'
+title = 'adam@migus.org'
 theme = 'custom'
 author = 'Adam Migus'
 copyright = '©️ 2024 Adam Migus. All rights reserved.'
