Content and style changes

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -6,8 +6,9 @@ title = 'adam@migus.org'
 theme = 'custom'
 author = 'Adam Migus'
 copyright = '©️ 2024 Adam Migus. All rights reserved.'
+description = 'Some information about the domain and the person who owns it.'
 [params]
-  googleFont = 'Droid Sans'
+  googleFont = 'Nunito Sans'
 [services]
   [services.googleAnalytics]
     id = 'G-0H4BE185DF'
