Add google font.

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,6 +5,8 @@ languageCode = 'en-us'
 title = 'migus.org'
 author = 'Adam Migus'
 copyright = '©️ 2024 Adam Migus. All rights reserved.'
+[params]
+  googleFont = 'Lato'
 [services]
   [services.googleAnalytics]
     id = 'G-0H4BE185DF'
