Avoid hard-coding fonts

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -6,7 +6,7 @@ title = 'migus.org'
 author = 'Adam Migus'
 copyright = '©️ 2024 Adam Migus. All rights reserved.'
 [params]
-  googleFont = 'Lato'
+  googleFonts = ['IBM Plex Mono', 'Lato']
 [services]
   [services.googleAnalytics]
     id = 'G-0H4BE185DF'
