--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "build": "exec-bin node_modules/.bin/hugo/hugo --gc --minify",
   "dependencies": {
-    "postcss-cli": "^8.0.0"
+    "autoprefixer": "^10.x",
+    "postcss": "^8.x",
+    "postcss-cli": "^8.0.0",
+    "tailwindcss": "^3.x"
   },
   "engines": {
     "node": ">=18.20.4"
