Upgrade tailwindcss from 3.x to 4.x.

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,6 +5,11 @@ languageCode = 'en-us'
 title = 'migus.org'
 author = 'Adam Migus'
 copyright = '©️ 2024 Adam Migus. All rights reserved.'
+[markup]
+  [goldmark]
+    [parser]
+      [attribute]
+        block = true
 [services]
   [services.googleAnalytics]
     id = 'G-0H4BE185DF'
