Update the copyright.

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,7 @@ enableRobotsTXT = true
 languageCode = 'en-us'
 title = 'migus.org'
 author = 'Adam Migus'
-copyright = '©️ 2024 Adam Migus. All rights reserved.'
+copyright = '©️ 2024, 2025 Adam Migus. All rights reserved.'
 [markup]
   [markup.goldmark]
     [markup.goldmark.parser]
