--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,7 @@ enableRobotsTXT = true
 languageCode = 'en-us'
 title = 'migus.org'
 author = 'Adam Migus'
-copyright = '©️ 2024, 2025 Adam Migus. All rights reserved.'
+copyright = '©2024, 2025 Adam Migus'
 [markup]
   [markup.goldmark]
     [markup.goldmark.parser]
@@ -12,6 +12,13 @@ copyright = '©️ 2024, 2025 Adam Migus. All rights reserved.'
         block = true
   [markup.highlight]
     style = 'rrt'
+[params]
+  [params.fonts]
+    [params.fonts.google]
+      sans = 'Fira Sans'
+      mono = 'Fira Mono'
+      extras = []
+
 [services]
   [services.googleAnalytics]
     id = 'G-0H4BE185DF'
